# process-sandbox

./: docker-compose.yml  process.cabal
src/: Index.hs
src/Process/: Abstract.hs  Arithmetic.hs  Example01.hs  Example02.hs  Example03.hs  Syntax.hs
src/Utility/: Base.hs
test/: IndexSpec.hs  SandboxSpec.hs
test/Process/: AbstractSpec.hs  ArithmeticSpec.hs  Example01Spec.hs  Example02Spec.hs  Example03Spec.hs
test/Utility/: BaseSpec.hs
